[package]
name = "nblistener"
version = "0.1.0"
authors = ["garypen <garypen@gmail.com>"]
edition = "2018"
description = "Provides a Listener trait to simplify interactions with std::net::TcpListener"
repository = "https://github.com/garypen/nblistener"
keywords = ["Listener", "TcpListener"]
categories = ["network-programming"]
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
ws2_32-sys = "0.2"

